--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,93 @@
     border : 1px solid;
 }
 
+
+.margin-5 {
+    margin: 5px;
+}
+
+
+.margin-10 {
+    margin: 10px;
+}
+
 .margin-20 {
     margin: 20px;
+}
+
+.banner {
+    padding: 30px;
+    background-color: white;
+    color: black;
+    width: 100%;
+    font-style:italic;
+
+}
+
+.dashboard {
+    padding: 30px;
+    background-color: white;
+    color: black;
+    width: 50%;
+    font-style:italic;
+
+}
+
+.font-size-50 {
+font-size: 50px;
+}
+
+.font-size-30 {
+    font-size: 30px;
+    }
+
+.font-size-20 {
+    font-size: 20px;
+    }
+
+.super-bold-black { 
+        text-shadow: 
+            -0.5px 0 , 0 0.5px black, 0.5px 0 black, 0 -0.5px black, 
+            -0.5px -0.5px black, 0.5px 0.5px black, -0.5px 0.5px black, 0.5px -0.5px black;
+    
+}
+
+.font-italic {
+    font-style: italic;
+}
+
+.font-thin {
+    font-weight: 50;
+}
+
+.width-100 {
+    width: 100%;
+}
+
+.width-25 {
+    width: 25%;
+}
+
+.width-250px {
+    width: 250px;
+}
+
+.width-500px {
+    width: 500px;
+}
+
+.flex {
+    display: flex;
+}
+
+.split {
+    margin-left: auto
+}
+
+.break-word {
+    overflow-wrap: break-word;
+}
+
+.color-black {
+    color: black;
 }
